--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>mai_library</title>
   </head>
   <body>
-  
+    <header class="header">
+      <a class="header__logo" href="/">
+        <h1 class="header__logo-title">mai_library</h1>
+        <span class="header__logo-description">Сборник материалов маёвца</span>
+      </a>
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="/">Сервисы</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="/">Организации</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="/">Справочники</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="/">Самообразование</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
