Create "about" section markup

--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h2 class="about__title">mai_library</h2>
+        <p class="about__content">
+          Сборник материалов для самообразования, ресурсов организаций вуза и справочников по нему
+          для всех причастных к Московскому авиационному институту.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
