Create "menu" section markup

--- a/index.html
+++ b/index.html
@@ -36,6 +36,41 @@
           для всех причастных к Московскому авиационному институту.
         </p>
       </section>
+      <section class="menu">
+        <h2 class="menu__title">Разделы</h2>
+        <nav class="menu__content">
+          <ul class="menu__content-list">
+            <li class="menu__content-item">
+              <a class="menu-card" href="/">
+                <img class="menu-card__icon" src="" alt=""/>
+                <h3 class="menu-card__title">Сервисы</h3>
+                <p class="menu-card__description">Цифровые инструменты вуза для образования</p>
+              </a>
+            </li>
+            <li class="menu__content-item">
+              <a class="menu-card" href="/">
+                <img class="menu-card__icon" src="" alt=""/>
+                <h3 class="menu-card__title">Организации</h3>
+                <p class="menu-card__description">Информационные ресурсы подразделений вуза</p>
+              </a>
+            </li>
+            <li class="menu__content-item">
+              <a class="menu-card" href="/">
+                <img class="menu-card__icon" src="" alt=""/>
+                <h3 class="menu-card__title">Справочники</h3>
+                <p class="menu-card__description">Статьи для решения различных вопросов</p>
+              </a>
+            </li>
+            <li class="menu__content-item">
+              <a class="menu-card" href="/">
+                <img class="menu-card__icon" src="" alt=""/>
+                <h3 class="menu-card__title">Самообразование</h3>
+                <p class="menu-card__description">Материалы для самостоятельной подготовки</p>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </section>
     </main>
   </body>
 </html>
