Create "resources" section markup

--- a/index.html
+++ b/index.html
@@ -72,5 +72,22 @@
         </nav>
       </section>
     </main>
+    <footer class="footer">
+      <section class="resources">
+        <h2 class="resources__title">Ресурсы</h2>
+        <ul class="resources__list">
+          <li class="resources__item">
+            <a class="resource" href="/">
+              <img class="resource__icon" src="https://t.me/mai_library" alt="Telegram" title="Telegram"/>
+            </a>
+          </li>
+          <li class="resources__item">
+            <a class="resource" href="/">
+              <img class="resource__icon" src="https://github.com/iannsgirdye/mai_library" alt="GitHub" title="GitHub"/>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
