Create "contact" section markup

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
           </li>
         </ul>
       </section>
+      <section class="contact">
+        <h2 class="contact__title">Связь</h2>
+        <p class="contact__content">
+          Предложить материал или идею и сообщить об ошибке или опечатке можно в директе нашего Telegram канала.
+        </p>
+      </section>
     </footer>
   </body>
 </html>
