Create "warning" paragraph in footer

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           Предложить материал или идею и сообщить об ошибке или опечатке можно в директе нашего Telegram канала.
         </p>
       </section>
+      <p class="warning">
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+      </p>
     </footer>
   </body>
 </html>
