Update content in "about" section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
       <section class="about">
         <h2 class="about__title">mai_library</h2>
         <p class="about__content">
-          Сборник материалов для самообразования, ресурсов организаций вуза и справочников по нему
-          для всех причастных к Московскому авиационному институту.
+          Сборник цифровых сервисов и информационных ресурсов организаций
+          <a href="https://mai.ru">Московского авиацинного института</a>,
+          материалов для самообразования и справочников по различным вопросам.
         </p>
       </section>
       <section class="menu">
