Add new resource

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
               <img class="resource__icon" src="https://github.com/iannsgirdye/mai_library" alt="GitHub" title="GitHub"/>
             </a>
           </li>
+          <li class="resources__item">
+            <a class="resource" href="/" >
+              <img 
+                class="resource__icon" alt="Вклады людей в проект" title="Вклады людей в проект"
+                src="https://docs.google.com/spreadsheets/d/1Vh6gqDomF5zCN3raRgMZ6qr3p6keeTBc7Z3VQ8KqPLw/edit?usp=sharing"/>
+            </a>
+          </li>
         </ul>
       </section>
       <section class="contact">
