Update title and header logo description

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <title>mai_library</title>
+    <title>mai_library — сборник материалов для маёвца</title>
   </head>
   <body>
     <header class="header">
       <a class="header__logo" href="/">
         <h1 class="header__logo-title">mai_library</h1>
-        <span class="header__logo-description">Сборник материалов маёвца</span>
+        <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
       <nav class="header__menu">
         <ul class="header__menu-list">
