Create "about" section markup

--- a/services.html
+++ b/services.html
@@ -28,5 +28,11 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Сервисы</h1>
+        <p class="about__content">Цифровые инструменты вуза для образования</p>
+      </section>
+    </main>
   </body>
 </html>
