--- a/services.html
+++ b/services.html
@@ -33,6 +33,80 @@
         <h1 class="about__title">Сервисы</h1>
         <p class="about__content">Цифровые инструменты вуза для образования</p>
       </section>
+      <section class="catalog">
+        <h2 class="catalog__title">Все сервисы</h2>
+        <div class="catalog__content">
+          <article class="catalog__item">
+            <a class="card" href="https://my.mai.ru/lk_student">
+              <div class="card__icon-wrapper">
+                <img class="card__icon" src="" alt="Сайт" title="Сайт"/>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Личный кабинет</h3>
+                <span class="card__description">Профиль, оценки, расписание, документы, услуги</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://mail.mai.education">
+              <div class="card__icon-wrapper">
+                <img class="card__icon" src="" alt="Сайт" title="Сайт"/>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Электронная почта</h3>
+                <span class="card__description">@mai.education</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://lms.mai.ru">
+              <div class="card__icon-wrapper">
+                <img class="card__icon" src="" alt="Сайт" title="Сайт"/>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Система электронного обучения</h3>
+                <span class="card__description">Онлайн-курсы по некоторым дисциплинам</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card card--telegram" href="https://t.me/mai_timetablebot">
+              <div class="card__icon-wrapper">
+                <img class="card__icon" src="" alt="Telegram" title="Telegram"/>
+                <span class="card__type">бот</span>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Расписание МАИ v2.0</h3>
+                <span class="card__description">Расписание занятий и план-схема кампуса</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card card--telegram" href="https://t.me/Timetable_MAI_bot">
+              <div class="card__icon-wrapper">
+                <img class="card__icon" src="" alt="Telegram" title="Telegram"/>
+                <span class="card__type">бот</span>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Расписание МАИ</h3>
+                <span class="card__description">Расписание занятий, отзывы на преподавателей, поиск свободной аудитории</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card card--telegram" href="https://t.me/maiuniversity_schedule_bot">
+              <div class="card__icon-wrapper">
+                <img class="card__icon" src="" alt="Telegram" title="Telegram"/>
+                <span class="card__type">мини</span>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Расписание МАИ</h3>
+                <span class="card__description">Расписание занятий</span>
+              </div>
+            </a>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
