Create footer markup

--- a/services.html
+++ b/services.html
@@ -108,5 +108,38 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <section class="resources">
+        <h2 class="resources__title">Ресурсы</h2>
+        <ul class="resources__list">
+          <li class="resources__item">
+            <a class="resource" href="/">
+              <img class="resource__icon" src="https://t.me/mai_library" alt="Telegram" title="Telegram"/>
+            </a>
+          </li>
+          <li class="resources__item">
+            <a class="resource" href="/">
+              <img class="resource__icon" src="https://github.com/iannsgirdye/mai_library" alt="GitHub" title="GitHub"/>
+            </a>
+          </li>
+          <li class="resources__item">
+            <a class="resource" href="/" >
+              <img 
+                class="resource__icon" alt="Вклады людей в проект" title="Вклады людей в проект"
+                src="https://docs.google.com/spreadsheets/d/1Vh6gqDomF5zCN3raRgMZ6qr3p6keeTBc7Z3VQ8KqPLw/edit?usp=sharing"/>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="contact">
+        <h2 class="contact__title">Связь</h2>
+        <p class="contact__content">
+          Предложить материал или идею и сообщить об ошибке или опечатке можно в директе нашего Telegram канала.
+        </p>
+      </section>
+      <p class="warning">
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+      </p>
+    </footer>
   </body>
 </html>
