--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="about__title">mai_library</h2>
         <p class="about__content">
           Сборник цифровых сервисов и информационных ресурсов организаций
-          <a href="https://mai.ru">Московского авиацинного института</a>,
+          <a href="https://mai.ru">Московского авиационного института</a>,
           материалов для самообразования и справочников по различным вопросам.
         </p>
       </section>
