--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <a class="header__logo" href="/">
-        <h1 class="header__logo-title">mai_library</h1>
+        <span class="header__logo-title">mai_library</span>
         <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
       <nav class="header__menu">
@@ -30,7 +30,7 @@
     </header>
     <main>
       <section class="about">
-        <h2 class="about__title">mai_library</h2>
+        <h1 class="about__title">mai_library</h1>
         <p class="about__content">
           Сборник цифровых сервисов и информационных ресурсов организаций
           <a href="https://mai.ru">Московского авиационного института</a>,
