Create header markup

--- a/organizations.html
+++ b/organizations.html
@@ -6,6 +6,27 @@
     <title>Организации | mai_library — сборник материалов для маёвца</title>
   </head>
   <body>
-  
+    <header class="header">
+      <a class="header__logo" href="/">
+        <span class="header__logo-title">mai_library</span>
+        <span class="header__logo-description">Сборник материалов для маёвца</span>
+      </a>
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="/">Сервисы</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link header__menu-link--active" href="/">Организации</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="/">Справочники</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="/">Самообразование</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
