--- a/organizations.html
+++ b/organizations.html
@@ -28,5 +28,11 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Организации</h1>
+        <p class="about__content">Информационные ресурсы подразделений вуза</p>
+      </section>
+    </main>
   </body>
 </html>
