Create markup of the branches catalog sections

--- a/organizations.html
+++ b/organizations.html
@@ -1056,6 +1056,81 @@
         </div>
       </section>
       <section class="catalog">
+        <h2 class="catalog__title">Филиалы</h2>
+        <div class="catalog__content">
+          <article class="catalog__item">
+            <a class="card" href="https://strela.mai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Стрела</h3>
+                <span class="card__description">Московская область, город Жуковский</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://vzlet.mai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Взлет</h3>
+                <span class="card__description">Астраханская область, город Ахтубинск</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://voshod.mai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Восход</h3>
+                <span class="card__description">город Байконур</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://sfmai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Ступинский филиал</h3>
+                <span class="card__description">Московская область, город Ступино</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://rkt.mai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Ракетно-космическая техника</h3>
+                <span class="card__description">Московская область, город Химки</span>
+              </div>
+            </a>
+          </article>
+        </div>
+      </section>
+      <section class="catalog">
         <h2 class="catalog__title">Поступление</h2>
         <div class="catalog__content">
           <article class="catalog__item">
