--- a/organizations.html
+++ b/organizations.html
@@ -1423,6 +1423,89 @@
           </article>
         </div>
       </section>
+      <section class="catalog">
+        <h2 class="catalog__title">Несортированное</h2>
+        <div class="catalog__content">
+          <article class="catalog__item">
+            <a class="card" href="https://oblako.mai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Облако</h3>
+                <span class="card__description">Издание о современных технологиях, которые либо уже, либо вот-вот поменяют мир, а также о людях — профессорах и преподавателях, молодых учёных и инженерах, студентах, которые претворяют идеи в жизнь</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://store.mai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">MAI STORE</h3>
+                <span class="card__description">Интернет-магазин</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://aeromai.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Аэромобильность</h3>
+                <span class="card__description">Экосистема беспилотной авиации, где соединяются наука, технологии и образование.</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card card--telegram" href="https://t.me/traektoriamai">
+              <div class="card__icon-wrapper" title="Telegram">
+                <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <defs>
+                    <linearGradient x1="50%" y1="0%" x2="50%" y2="99.2583404%" id="linearGradient-1">
+                      <stop stop-color="#2AABEE" offset="0%"></stop>
+                      <stop stop-color="#229ED9" offset="100%"></stop>
+                    </linearGradient>
+                  </defs>
+                  <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <circle fill="url(#linearGradient-1)" cx="500" cy="500" r="500"></circle>
+                    <path d="M226.3,494.7C372.1,431.2,469.3,389.4,517.9,369.1C656.8,311.4,685.6,301.3,704.4,301c4.1-0.1,13.3,1,19.3,5.8c5.1,4.1,6.5,9.7,7.2,13.6c0.7,3.9,1.5,12.8,0.8,19.8c-7.5,79.1-40.1,271-56.7,359.6c-7,37.5-20.8,50.1-34.2,51.3c-29,2.7-51-19.1-79.1-37.5c-44-28.8-68.9-46.7-111.6-74.9c-49.4-32.5-17.4-50.4,10.7-79.6c7.4-7.6,135.3-124.1,137.8-134.7c0.3-1.3,0.6-6.2-2.3-8.7c-2.9-2.5-7.2-1.6-10.3-0.9c-4.4,1-74.7,47.5-210.9,139.4c-20,13.7-38.1,20.4-54.3,20.1c-17.9-0.4-52.2-10.1-77.7-18.4c-31.3-10.2-56.2-15.6-54-32.9c1.1-9.1,13.5-18.3,37.2-27.7Z" fill="#FFFFFF"></path>
+                  </g>
+                </svg>
+                <span class="card__type">канал</span>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Траектория взлёта</h3>
+                <span class="card__description">Образовательная площадка для детей с топовыми направлениями подготовки</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://maiprof.ru">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Профсоюз работников</h3>
+              </div>
+            </a>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
