--- a/self-education.html
+++ b/self-education.html
@@ -28,5 +28,11 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Самообразование</h1>
+        <p class="about__content">Материалы для самостоятельной подготовки</p>
+      </section>
+    </main>
   </body>
 </html>
