Create markup of the "math" catalog section

--- a/self-education.html
+++ b/self-education.html
@@ -33,6 +33,95 @@
         <h1 class="about__title">Самообразование</h1>
         <p class="about__content">Материалы для самостоятельной подготовки</p>
       </section>
+      <section class="catalog">
+        <h2 class="catalog__title">Математика</h2>
+        <div class="catalog__content">
+          <article class="catalog__item">
+            <a class="card" href="https://mathprofi.net">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">mathprofi.net</h3>
+                <span class="card__description">Высшая математика – просто и доступно</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://www.mathway.com">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Mathway</h3>
+                <span class="card__description">Решение математических задач</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://mathdf.com">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">MathDF</h3>
+                <span class="card__description">Пошаговые калькуляторы</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://www.desmos.com">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">Desmos</h3>
+                <span class="card__description">Графический, научный, арифметический, матричный, 3D калькуляторы и геометрические инструменты</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://www.3blue1brown.com">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">3Blue1Brown</h3>
+                <span class="card__description">Анимированная математика</span>
+              </div>
+            </a>
+          </article>
+          <article class="catalog__item">
+            <a class="card" href="https://www.wolframalpha.com">
+              <div class="card__icon-wrapper" title="Сайт">
+                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
+                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
+                </svg>
+              </div>
+              <div class="card__text-wrapper">
+                <h3 class="card__title">WolframAlpha</h3>
+                <span class="card__description">Уникальная система для поиска ответов и получения знаний</span>
+              </div>
+            </a>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
