Create page menu for "organizations" page

--- a/organizations.html
+++ b/organizations.html
@@ -33,7 +33,74 @@
         <h1 class="about__title">Организации</h1>
         <p class="about__content">Информационные ресурсы подразделений вуза</p>
       </section>
-      <section class="catalog">
+      <section class="page-menu">
+        <h2 class="page-menu__title visually-hidden">Меню страницы</h2>
+        <nav class="page-menu__menu">
+          <ul class="page-menu__list">
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-studying">Учебные</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-community-something">Объединения: разное</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-community-sport">Объединения: спорт</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-1">Институт №1</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-2">Институт №2</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-3">Институт №3</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-4">Институт №4</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-5">Институт №5</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-6">Институт №6</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-7">Институт №7</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-8">Институт №8</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-9">Институт №9</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-10">Институт №10</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-11">Институт №11</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-12">Институт №12</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-13">ВУЦ при МАИ</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-institute-14">Институт №14</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-branches">Филиалы</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-entrance">Поступление</a>
+            </li>
+            <li class="page-menu__item">
+              <a class="page-menu__link" href="#catalog-not-sorted">Несортированное</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section class="catalog" id="catalog-studying">
         <h2 class="catalog__title">Учебные</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -102,7 +169,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-community-something">
         <h2 class="catalog__title">Объединения: разное</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -283,7 +350,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-community-sport">
         <h2 class="catalog__title">Объединения: спорт</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -401,7 +468,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-1">
         <h2 class="catalog__title">Институт №1 "Авиационная техника"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -450,7 +517,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-2">
         <h2 class="catalog__title">Институт №2 "Авиационные, ракетные двигатели и энергетические установки"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -499,7 +566,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-3">
         <h2 class="catalog__title">Институт №3 "Системы управления, информатика и электроэнергетика"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -588,7 +655,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-4">
         <h2 class="catalog__title">Институт №4 "Радиоэлектроника, инфокоммуникации и информационная безопасность"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -629,7 +696,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-5">
         <h2 class="catalog__title">Институт №5 "Экономика и менеджмент высокотехнологичной индустрии"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -678,7 +745,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-6">
         <h2 class="catalog__title">Институт №6 "Аэрокосмический"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -719,7 +786,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-7">
         <h2 class="catalog__title">Институт №7 "Робототехнические и интеллектуальные системы"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -768,7 +835,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-8">
         <h2 class="catalog__title">Институт №8 "Компьютерные науки и прикладная математика"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -852,7 +919,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-9">
         <h2 class="catalog__title">Институт №9 "Общеинженерная подготовка"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -897,7 +964,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-10">
         <h2 class="catalog__title">Институт №10 "Иностранные языки"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -942,7 +1009,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-11">
         <h2 class="catalog__title">Институт №11 "Материаловедение и технологии материалов"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -965,7 +1032,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-12">
         <h2 class="catalog__title">Институт №12 "Аэрокосмические наукоёмкие технологии и производства"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -988,7 +1055,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-13">
         <h2 class="catalog__title">Военный учебный центр при МАИ</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -1028,7 +1095,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-institute-14">
         <h2 class="catalog__title">Институт №14 "Передовая инженерная школа"</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -1055,7 +1122,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-branches">
         <h2 class="catalog__title">Филиалы</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -1130,7 +1197,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-entrance">
         <h2 class="catalog__title">Поступление</h2>
         <div class="catalog__content">
           <article class="catalog__item">
@@ -1423,7 +1490,7 @@
           </article>
         </div>
       </section>
-      <section class="catalog">
+      <section class="catalog" id="catalog-not-sorted">
         <h2 class="catalog__title">Несортированное</h2>
         <div class="catalog__content">
           <article class="catalog__item">
