--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Сервисы | mai_library — сборник материалов для маёвца</title>
     <link rel="stylesheet" href="./normalize.css"/>
+    <link rel="stylesheet" href="./styles.css"/>
   </head>
   <body>
     <header class="header">
