Create styles for "catalog" section

--- a/organizations.html
+++ b/organizations.html
@@ -264,7 +264,7 @@
               </div>
               <div class="card__text-wrapper">
                 <h3 class="card__title">Шахматный клуб</h3>
-                <span class="card__description">Шахматное сообщество действующих и бывших студентов, преподавателей и сотрудников МАИ, которые всей душой любят шахматы</span>
+                <span class="card__description">Шахматное сообщество действующих и бывших студентов, преподавателей и сотрудников МАИ</span>
               </div>
             </a>
           </article>
