--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 class="about__title">mai_library</h1>
         <p class="about__content">
           Сборник цифровых сервисов и информационных ресурсов организаций
-          <a href="https://mai.ru">Московского авиационного института</a>,
+          <a class="link" href="https://mai.ru">Московского авиационного института</a>,
           материалов для самообразования и справочников по различным вопросам.
         </p>
       </section>
