Fix burger menu and units

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
         <div class="burger">
           <input class="burger__checkbox" id="burger-checkbox" type="checkbox"/>
           <label class="burger__label" for="burger-checkbox"></label>
-          <ul class="burger__list">
-            <li class="burger__item">
-              <a class="burger__link" href="/">Сервисы</a>
-            </li>
-            <li class="burger__item">
-              <a class="burger__link" href="/">Организации</a>
-            </li>
-            <li class="burger__item">
-              <a class="burger__link" href="/">Справочники</a>
-            </li>
-            <li class="burger__item">
-              <a class="burger__link" href="/">Самообразование</a>
-            </li>
-          </ul>
+          <div class="burger__list-wrapper">
+            <ul class="burger__list">
+              <li class="burger__item">
+                <a class="burger__link" href="/">Сервисы</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Организации</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Справочники</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Самообразование</a>
+              </li>
+            </ul>
+          </div>
         </div>
         <ul class="header__menu-list">
           <li class="header__menu-item">
