Add burger menu to children pages

--- a/services.html
+++ b/services.html
@@ -14,6 +14,26 @@
         <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
       <nav class="header__menu">
+        <div class="burger">
+          <input class="burger__checkbox" id="burger-checkbox" type="checkbox"/>
+          <label class="burger__label" for="burger-checkbox"></label>
+          <div class="burger__list-wrapper">
+            <ul class="burger__list">
+              <li class="burger__item">
+                <a class="burger__link burger__link--active" href="/">Сервисы</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Организации</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Справочники</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="/">Самообразование</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <ul class="header__menu-list">
           <li class="header__menu-item">
             <a class="header__menu-link header__menu-link--active" href="/">Сервисы</a>
