Add links to pages in navs

--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="/">
+      <a class="header__logo" href="./index.html">
         <span class="header__logo-title">mai_library</span>
         <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
@@ -20,32 +20,32 @@
           <div class="burger__list-wrapper">
             <ul class="burger__list">
               <li class="burger__item">
-                <a class="burger__link burger__link--active" href="/">Сервисы</a>
+                <a class="burger__link burger__link--active" href="./services.html">Сервисы</a>
               </li>
               <li class="burger__item">
-                <a class="burger__link" href="/">Организации</a>
+                <a class="burger__link" href="./organizations.html">Организации</a>
               </li>
               <li class="burger__item">
                 <a class="burger__link" href="/">Справочники</a>
               </li>
               <li class="burger__item">
-                <a class="burger__link" href="/">Самообразование</a>
+                <a class="burger__link" href="./self-education.html">Самообразование</a>
               </li>
             </ul>
           </div>
         </div>
         <ul class="header__menu-list">
           <li class="header__menu-item">
-            <a class="header__menu-link header__menu-link--active" href="/">Сервисы</a>
+            <a class="header__menu-link header__menu-link--active" href="./services.html">Сервисы</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Организации</a>
+            <a class="header__menu-link" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="/">Справочники</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Самообразование</a>
+            <a class="header__menu-link" href="./self-education.html">Самообразование</a>
           </li>
         </ul>
       </nav>
