--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="/">
+      <a class="header__logo" href="./index.html">
         <span class="header__logo-title">mai_library</span>
         <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
@@ -20,32 +20,32 @@
           <div class="burger__list-wrapper">
             <ul class="burger__list">
               <li class="burger__item">
-                <a class="burger__link" href="/">Сервисы</a>
+                <a class="burger__link" href="./services.html">Сервисы</a>
               </li>
               <li class="burger__item">
-                <a class="burger__link" href="/">Организации</a>
+                <a class="burger__link" href="./organizations.html">Организации</a>
               </li>
               <li class="burger__item">
                 <a class="burger__link" href="/">Справочники</a>
               </li>
               <li class="burger__item">
-                <a class="burger__link" href="/">Самообразование</a>
+                <a class="burger__link" href="./self-education.html">Самообразование</a>
               </li>
             </ul>
           </div>
         </div>
         <ul class="header__menu-list">
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Сервисы</a>
+            <a class="header__menu-link" href="./services.html">Сервисы</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Организации</a>
+            <a class="header__menu-link" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="/">Справочники</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Самообразование</a>
+            <a class="header__menu-link" href="./self-education.html">Самообразование</a>
           </li>
         </ul>
       </nav>
@@ -64,7 +64,7 @@
         <nav class="menu__content">
           <ul class="menu__content-list">
             <li class="menu__content-item">
-              <a class="menu-card" href="/">
+              <a class="menu-card" href="./services.html">
                 <svg width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6 13C6.55 13 7 12.55 7 12C7 11.45 6.55 11 6 11C5.45 11 5 11.45 5 12C5 12.55 5.45 13 6 13Z" stroke="#000000" stroke-width="2"/>
                   <path d="M6 7C6.55 7 7 6.55 7 6C7 5.45 6.55 5 6 5C5.45 5 5 5.45 5 6C5 6.55 5.45 7 6 7Z" stroke="#000000" stroke-width="2"/>
@@ -81,7 +81,7 @@
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="/">
+              <a class="menu-card" href="./organizations.html">
                 <svg width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M16 6C14.3432 6 13 7.34315 13 9C13 10.6569 14.3432 12 16 12C17.6569 12 19 10.6569 19 9C19 7.34315 17.6569 6 16 6ZM11 9C11 6.23858 13.2386 4 16 4C18.7614 4 21 6.23858 21 9C21 10.3193 20.489 11.5193 19.6542 12.4128C21.4951 13.0124 22.9176 14.1993 23.8264 15.5329C24.1374 15.9893 24.0195 16.6114 23.5631 16.9224C23.1068 17.2334 22.4846 17.1155 22.1736 16.6591C21.1979 15.2273 19.4178 14 17 14C13.166 14 11 17.0742 11 19C11 19.5523 10.5523 20 10 20C9.44773 20 9.00001 19.5523 9.00001 19C9.00001 18.308 9.15848 17.57 9.46082 16.8425C9.38379 16.7931 9.3123 16.7323 9.24889 16.6602C8.42804 15.7262 7.15417 15 5.50001 15C3.84585 15 2.57199 15.7262 1.75114 16.6602C1.38655 17.075 0.754692 17.1157 0.339855 16.7511C-0.0749807 16.3865 -0.115709 15.7547 0.248886 15.3398C0.809035 14.7025 1.51784 14.1364 2.35725 13.7207C1.51989 12.9035 1.00001 11.7625 1.00001 10.5C1.00001 8.01472 3.01473 6 5.50001 6C7.98529 6 10 8.01472 10 10.5C10 11.7625 9.48013 12.9035 8.64278 13.7207C9.36518 14.0785 9.99085 14.5476 10.5083 15.0777C11.152 14.2659 11.9886 13.5382 12.9922 12.9945C11.7822 12.0819 11 10.6323 11 9ZM3.00001 10.5C3.00001 9.11929 4.1193 8 5.50001 8C6.88072 8 8.00001 9.11929 8.00001 10.5C8.00001 11.8807 6.88072 13 5.50001 13C4.1193 13 3.00001 11.8807 3.00001 10.5Z" fill="#000000"/>
                 </svg>
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="/">
+              <a class="menu-card" href="./self-education.html">
                 <svg width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4 19V6.2C4 5.0799 4 4.51984 4.21799 4.09202C4.40973 3.71569 4.71569 3.40973 5.09202 3.21799C5.51984 3 6.0799 3 7.2 3H16.8C17.9201 3 18.4802 3 18.908 3.21799C19.2843 3.40973 19.5903 3.71569 19.782 4.09202C20 4.51984 20 5.0799 20 6.2V17H6C4.89543 17 4 17.8954 4 19ZM4 19C4 20.1046 4.89543 21 6 21H20M9 7H15M9 11H15M19 17V21" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
